--- a/大数据日知录-架构与算法（一）.md
+++ b/大数据日知录-架构与算法（一）.md
@@ -26,3 +26,13 @@
 8.**一致性哈希**：Consistent Hashing。一致性哈希基本解决了在P2P环境中最为关键的问题——如何在动态的网络拓扑中分布存储和路由。可以参见[每天进步一点点——五分钟理解一致性哈希算法(consistent hashing)](http://blog.csdn.net/cywosp/article/details/23397179); 为了解决一致性哈希中的机器负载不均衡问题，引入了**虚拟节点**；
 
 9.**范围分片**：将所有记录的主键进行排序，然后将其进行数据分片，每个partition存储有序的主键空间片段内的所有记录。
+
+## 第2章 数据复制与一致性
+### 基本原则与设计理念
+1.主要的基本原则有CAP、BASE以及ACID。这三者应用的场景各异。
+
+2.**CAP**：大规模分布式集群系统的三大要素，但是三者不可兼得，这三者分别为：  
+    C：consistency，强一致性。数据在多副本上的表现和在单一副本上是一样的；  
+    A：availability，可用性。客户端的任何R/W操作都应该在限定延时内完成；   
+    P：partition tolerance，分区容忍性。网络分区现象时，仍可以继续工作。  
+ 一般，在AP和CP之间选择。但是真实情况下，网络分区发生的概率低，因此，正常情况下，尽可能兼顾CAP三者。
